# parallelproj-backend

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  TODO.md  dir_1036706e55c22cab35bc1c58ee689f1d.html  dir_1036706e55c22cab35bc1c58ee689f1d_dep.md5  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_629f8151d55d307162ff2d619fb1783d.html  dir_629f8151d55d307162ff2d619fb1783d.js  dir_629f8151d55d307162ff2d619fb1783d_dep.map  dir_629f8151d55d307162ff2d619fb1783d_dep.md5  dir_7fd96bcdb73c43f3827287ef50d2b220.html  dir_7fd96bcdb73c43f3827287ef50d2b220.js  dir_7fd96bcdb73c43f3827287ef50d2b220_dep.map  dir_7fd96bcdb73c43f3827287ef50d2b220_dep.md5  dir_8632c61787ce92563e1a706521c8c80a.html  dir_8632c61787ce92563e1a706521c8c80a.js  dir_8632c61787ce92563e1a706521c8c80a_dep.map  dir_8632c61787ce92563e1a706521c8c80a_dep.md5  dir_d22b99b7ffdf76c633b270043ca650fb.html  dir_d22b99b7ffdf76c633b270043ca650fb.js  dir_d22b99b7ffdf76c633b270043ca650fb_dep.map  dir_d22b99b7ffdf76c633b270043ca650fb_dep.md5  environment.yml  environment_cuda.yml  files.html  globals.html  globals_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  parallelproj_8h.html  parallelproj_8h.js  parallelproj_8h__incl.map  parallelproj_8h__incl.md5  parallelproj_8h_source.html
.github/workflows/: build_and_test.yml  build_cuda.yml  build_docs.yml
include/: cuda_utils.h  parallelproj.h  utils.h
include/parallelproj/: parallelproj_export.h
python/: bindings.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  files_0.js  pages_2.js  searchdata.js
src/: joseph3d_back.cpp  joseph3d_back.cu  joseph3d_back_worker.h  joseph3d_fwd.cpp  joseph3d_fwd.cu  joseph3d_fwd_worker.h  joseph3d_tof_sino_back.cpp  joseph3d_tof_sino_back.cu  joseph3d_tof_sino_back_worker.h  joseph3d_tof_sino_fwd.cpp  joseph3d_tof_sino_fwd.cu  joseph3d_tof_sino_fwd_worker.h
tests/: config.py  test_bilinear_interp.cpp  test_bilinear_interp_adj.cpp  test_bilinear_interp_adj_cuda.cu  test_bilinear_interp_cuda.cu  test_nontof_fwd_back.cpp  test_nontof_fwd_back.py  test_nontof_fwd_back_cuda.cu  test_ray_cube_intersection.cpp  test_ray_cube_intersection_cuda.cu  test_tof_sinogram_projection.py
wip/: ray_cube.py  test.py  test_tof.py
